# tiny-gpt

./: .gitignore  pyproject.toml
data/openwebtext/: prepare.py
notebook/: demo.ipynb
src/tiny_gpt/model/: attention.py  config.py  dataset.py  model.py
src/tiny_gpt/train/: pretrain.py
